Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <nav>
         <ul class="nav"><!--navigation bar created-->
-            <li><a href="home.html" class="home">Home</a></li>
+            <li><a href="index.html" class="home">Home</a></li>
             <li><a href="packages.html" class="package">Packages</a></li>
             <li><a href="booking.html" class="booking">Booking</a></li>
         </ul>
