--- a/packages.html
+++ b/packages.html
@@ -15,7 +15,7 @@
 
     <nav>
         <ul class="nav">
-            <li><a href="home.html" class="home" target="_blank">Home</a></li>
+            <li><a href="index.html" class="home" target="_blank">Home</a></li>
             <li><a href="packages.html" class="package" target="_blank">Packages</a></li>
             <li><a href="booking.html" class="booking" target="_blank">Booking</a></li>
         </ul>
