--- a/booking.html
+++ b/booking.html
@@ -15,7 +15,7 @@
 
     <nav> <!--Nav bar-->
         <ul class="nav">
-            <li><a href="home.html" target="_blank">Home</a></li>
+            <li><a href="index.html" target="_blank">Home</a></li>
             <li><a href="packages.html" target="_blank">Packages</a></li>
             <li><a href="booking.html" target="_blank">Booking</a></li>
         </ul>
